--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "https://github.com/seekr3/fcc-timestamp-microservice.git"
   },
   "author": "Abram Bradley",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
